# android-arch-old

./: .gitignore
app/: build.gradle
app/src/androidTest/: AndroidManifest.xml
app/src/androidTest/java/dev/lucasnlm/arch/: ExampleInstrumentedTest.kt  MockTestRunner.kt  TestMainApplication.kt
app/src/androidTest/java/dev/lucasnlm/arch/helper/: InfoViewPositionMatcher.kt  InfoViewTestHelpers.kt  WaitFor.kt
app/src/androidTest/java/dev/lucasnlm/arch/soc/: SocInfoFragmentTest.kt
app/src/androidTest/java/dev/lucasnlm/arch/system/: SystemInfoFragmentTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  native_data_reader.cpp  native_data_reader.h  native_lib.cpp
app/src/main/java/dev/lucasnlm/arch/: MainActivity.kt  MainApplication.kt
app/src/main/java/dev/lucasnlm/arch/common/: DataReader.kt
app/src/main/java/dev/lucasnlm/arch/core/: BaseActivity.kt  BaseFragment.kt
app/src/main/java/dev/lucasnlm/arch/device/: Contracts.kt  DeviceInfoFragment.kt
app/src/main/java/dev/lucasnlm/arch/main/: Contracts.kt  MainActivity.kt
app/src/main/res/drawable/: background_round_tag.xml  bottom_navigation_color.xml  divider_tag_horizontal.xml  divider_tag_vertical.xml
app/src/main/res/layout/: activity_main.xml  activity_splash.xml  fragment_device_info.xml  fragment_soc_info.xml  fragment_system_info.xml  item_info.xml  item_tag.xml
app/src/main/res/menu/: bottom_nav_menu.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
(+100 files in other folders)
